# Django_REST_TMS_Homework

./: .gitignore  pyproject.toml
app/: forms.py  models.py  urls.py  views.py
app/api/: serializers.py
app/migrations/: 0001_initial.py  0002_initial.py  0003_ingredient_calories_ingredient_description_and_more.py
food/: settings.py  urls.py
templates/: ingredient-form.html  welcome.html
users/migrations/: 0001_initial.py
